--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "multer": "^1.4.2"
   },
   "devDependencies": {},
+  "engines": {
+    "node": "12.18.1"
+  }
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
